[package]
name = "nexus-steam-integration"
version = "1.0.2"
edition = "2021"
authors = ["Zyian"]
description = "Initializes the Steam API to show you are playing GW2 on Steam to track time played."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "nexus_steam_integration"

[dependencies]
steamworks = { version = "0.11.0" }

[dependencies.nexus]
git = "https://github.com/Zerthox/nexus-rs.git"
rev = "fad2c8cfc1aa646b32d68b80858a6323375a95b8"