[package]
name = "nexus-steam-integration"
version = "1.0.3"
edition = "2021"
authors = ["Zyian"]
description = "Initializes the Steam API to show you are playing GW2 on Steam to track time played."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "nexus_steam_integration"

[dependencies]
sharedlib = "7.0.0"
once_cell = "1.19.0"

[dependencies.nexus]
git = "https://github.com/Zerthox/nexus-rs.git"
rev = "29062458472273522c77f38fdb20811a6913fe6b"